--- a/doc/log.tex
+++ b/doc/log.tex
@@ -1,7 +1,7 @@
 % vim: sw=2 ft=tex
 %         File: log.tex
 % Date Created: 2013 Oct 14
-%  Last Change: 2013 Dec 05
+%  Last Change: 2013 Dec 18
 %       Author: csulbj
 \author{Alex J. Best}
 \date{\today}
@@ -39,7 +39,7 @@ We then calculate the possible conductors and their corresponding orders (how?).
 
 \marginpar{7/11/13}
 Given $[F:\mathbb{Q}] = d$ we have $\mathcal{O}_F\subset F$ and $\mathcal{O} = \mathbb{Z} + f\mathcal{O}_F$.
-Then $\mathbb{O}_F/\mathcal{O} = \mathcal{O}_F/f\mathcal{O}_f$ torsion module.
+Then $\mathcal{O}_F/\mathcal{O} = \mathcal{O}_F/f\mathcal{O}_f$ torsion module.
 $\operatorname{norm}(f\mathcal{O}_F) = f^2 \in \mathbb{Z}$.
 
 Can work one prime at a time (locally) then path things together for a speedup.
