--- a/doc/report.tex
+++ b/doc/report.tex
@@ -2,24 +2,36 @@
 \date{\today}
 \title{Finding orders with prescribed index in number fields}
 \documentclass[11pt,a4paper]{report}
-\usepackage{amsmath, amssymb, amsfonts, amsthm, hyperref}
+\usepackage{amsmath, amssymb, amsfonts, amsthm, hyperref, listings}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[english]{babel}
 
-\newtheorem*{thm}{Theorem}
-\newtheorem*{lem}{Lemma}
-\newtheorem*{cor}{Corollary}
-\newtheorem*{prop}{Proposition}
+\newtheorem{thm}{Theorem}
+\newtheorem{lem}{Lemma}
+\newtheorem{cor}{Corollary}
+\newtheorem{prop}{Proposition}
 \theoremstyle{definition}
-\newtheorem*{defn}{Definition}
-\newtheorem*{defns}{Definitions}
-\newtheorem*{ex}{Example}
-\newtheorem*{rem}{Remark}
-\newtheorem*{nota}{Notation}
-\newtheorem*{alg}{Algorithm}
+\newtheorem{defn}{Definition}
+\newtheorem{defns}{Definitions}
+\newtheorem{prob}{Problem}
+\newtheorem{ex}{Example}
+\newtheorem{rem}{Remark}
+\newtheorem{nota}{Notation}
+\newtheorem{alg}{Algorithm}
 
 \setcounter{tocdepth}{3}
+
+\lstset{
+basicstyle=\footnotesize,       % the size of the fonts that are used for the code
+showspaces=false,               % show spaces adding particular underscores
+showstringspaces=false,         % underline spaces within strings
+showtabs=false,                 % show tabs within strings adding particular underscores
+frame=single,           % adds a frame around the code
+captionpos=b,           % sets the caption-position to bottom
+breaklines=true,        % sets automatic line breaking
+breakatwhitespace=false,    % sets if automatic breaks should only happen at whitespace
+}
 
 \begin{document}
 \maketitle
@@ -28,38 +40,126 @@
 % TODO list:
 % - Add sage and magma to refs.
 % - Include thanks?
+% - Fix ~ characters in magma code listing
+
+% Structure:
+% - Introduction
+% - Background
+% - Problem
+% - Applications to elliptics over Q
+% - Conclusion
 
 \chapter{Introduction}
 
+This report details .
+
 \chapter{Background material}
+
 In this section we fix several definitions and important results from algebraic number theory and commutative algebra.
 These results are well known and are used throughout the rest of the report.
+There is also some necessary background for the applications to elliptic curves, this is introduced as we need it in section~\ref{sec:ell} however in order to keep this section as brief as possible.
+
+\section{Commutative algebra}
 
 
+\section{Algebraic number theory}
 
-\chapter{Solving the problem}
+Algebraic number theory can be thought of as beginning with the study of \emph{algebraic numbers}.
+The subject as a whole now encompasses a huge amount of related mathematics, all involving the use of algebraic techniques to tackle number theoretic problems. %TODO ????
+
+\begin{defn}[Number field]
+\end{defn}
+
+\begin{defn}[Order]
+\end{defn}
+
+\begin{defn}[Ring of integers]
+\end{defn}
+
+
+We are now ready to state in precise terms the project aimed to solve and to detail the methods used in its solution.
+
+\chapter{The problem}
+\section{Statement}
+
+The aim of the project was to find a solution to the following problem, and moreover to find an algorithmic solution that works efficiently.
+
+\begin{prob}
+Given an order $R$ of an absolute number field $K$ and an integer $I$ find the set
+\[\left\{ \mathcal{O}\subseteq R \mid \mathcal{O}\text{ is a suborder},\ [R:\mathcal{O}] = I\right\}.\]
+\end{prob}
+
+To find a suborder we really mean compute a $\mathbb{Z}$ basis for the order, as such a basis defines an order completely.
+
+\paragraph{}
+One very natural extension of the above problem is to consider relative extensions of number fields.
+More precisely we wish to study the following problem.
+
+\begin{prob} % TODO check this is really what I mean
+Given an extension of number fields $L|K$, a $\mathbb{Z}_K$-order $R$ of $\mathbb{Z}_L$ and an integer $I$ find the set
+\[\left\{ \mathcal{O}\subseteq R \mid \mathcal{O}\text{ is a $\mathbb{Z}_K$-suborder},\ [R:\mathcal{O}] = I\right\}.\]
+\end{prob}
+
+We now detail the steps leading up to a solution of the problem in increasing generality.
+The solution is presented this way in order to motivate the ideas used in the more general cases
+
+\section{Quadratic number fields}
+
+It is well known \cite{} that the ring of integers of a quadratic field $K = \mathbb{Q}(\sqrt{d})$ for $d$ non-square always takes the form
+\[\mathbb{Z}_K = \mathbb{Z} + \mathbb{Z}\alpha,\text{ with } \alpha =\begin{cases}
+\sqrt{d}&\text{ if $d\equiv 2,3\pmod{4}$},\\
+\frac{1+\sqrt{d}}{2}&\text{ if $d\equiv 1\pmod{4}$}.
+\end{cases}\]
+
+Indeed there is so little room for manoeuvre here that we obtain the following result on the structure of an order in this case.
+
+\begin{prop}
+Every $\mathcal{O}$ of a quadratic number field is given by 
+\[\mathcal{O} = \mathbb{Z} + \mathbb{Z}m\alpha\]
+for some $m\in \mathbb{Z}$, $\alpha$ as above.
+\end{prop}
+
+
+\section{Absolute number fields}
+
+We originally hoped that the correspondence between suborders and their conductors that exists in the quadratic case (Theorem \ref{thm:corr}) could be generalised to higher degree number fields.
+However the direct generalisations of this result fail to hold even in degree 3 number fields.
+We now give examples of some results that would be good for our purposes if true and explicit counter examples for each of them.
+% TODO list some generalisations here
+
+
+\section{Relative number fields}
+
 
 
 \chapter{Applications}
 
+Through the main problem itself is an interesting one which is worth studying in its own right we were also motivated to look at it by the potential applications to other questions within the same areas of mathematics.
+% TODO are there more apps?
+One of the most prominent areas in which a solution to the problem can be used is to answer questions about elliptic curves.
+How a solution to the problem considered above can be applied in this case is detailed below, along with results obtain from the application of our methods there.
+Also ???
+
+\section{Elliptic curves}
+\label{sec:ell}
 
 \chapter{Conclusion}
 
+\section{Further work}
 
 \chapter{Appendix: Code}
 
 Much of what was done has been implemented in both the Sage and Magma and so we provide annotated source code listings for the algorithms in both languages below.
  
 \section{Sage}
-
+\lstinputlisting[language=Python]{../sage/order_of_index.py}
 
 \section{Magma}
+\lstinputlisting[language=Pascal]{../magma/orderofindex.m}
 
 
 \nocite{*}
 \bibliographystyle{alpha}
 \bibliography{biblio}
-
-
 
 \end{document}
