more report done

--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -28,7 +28,7 @@
   publisher={Springer New York}
 }
 
-@book{neukirch10,
+@book{neukirch,
   title={Algebraic Number Theory},
   author={Neukirch, J. and Schappacher, N.},
   isbn={9783642084737},
@@ -38,7 +38,7 @@
   publisher={Springer}
 }
 
-@book{lang94,
+@book{lang,
   title={Algebraic Number Theory},
   author={Lang, S.},
   isbn={9780387942254},
@@ -50,8 +50,39 @@
 }
 
 @phdthesis{brakenhoff,
-  author={Johannes Brakenhoff},
+  author={Brakenhoff, J.},
   title={Counting problems for number rings},
   year={2009},
   school={Universiteit Leiden}
+}
+
+@book{am,
+  title={Introduction to Commutative Algebra},
+  author={Atiyah, M. and MacDonald, I. G.},
+  isbn={9780813345444},
+  series={Addison-Wesley series in mathematics},
+  url={http://books.google.co.uk/books?id=HOASFid4x18C},
+  year={1994},
+  publisher={Westview Press}
+}
+
+@book{cox,
+  title={Primes of the Form $x^2 + ny^2$: Fermat, Class Field Theory, and Complex Multiplication},
+  author={Cox, D. A.},
+  isbn={9781118031001},
+  series={Pure and Applied Mathematics: A Wiley Series of Texts, Monographs and Tracts},
+  url={http://books.google.co.uk/books?id=tlTZC-k-l2EC},
+  year={2013},
+  publisher={Wiley}
+}
+
+@book{matsumura,
+  title={Commutative Ring Theory},
+  author={Matsumura, H. and Reid, M.},
+  isbn={9780521367646},
+  lccn={86011691},
+  series={Cambridge Studies in Advanced Mathematics},
+  url={http://books.google.co.uk/books?id=yJwNrABugDEC},
+  year={1989},
+  publisher={Cambridge University Press}
 }
